<resources>
    <string name="app_name">Plantix</string>
    <string name="tagline">The Best App For Your Plant</string>
    <string name="get_started">Get Started</string>
    <string name="masuk">Masuk</string>
    <string name="dont_have_acc">Belum memiliki akun?</string>
    <string name="register">Daftar</string>
    <string name="login">Sign In</string>->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings">Good Morning</string>
    <string name="dummy_news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam aliquam, nisl euismod hendrerit auctor, enim urna feugiat mauris, at mollis dolor justo et orci. Etiam accumsan nisl quis ex consectetur, fringilla ullamcorper leo pulvinar. Praesent luctus, mi eu tincidunt pulvinar, nisl neque tristique purus, non faucibus nulla tortor tristique lectus. Phasellus at tincidunt nunc, quis egestas nunc. Duis sollicitudin ex nec nisl ornare, eu elementum nulla viverra. Vestibulum odio ligula, efficitur eu facilisis in, laoreet a arcu. Donec posuere semper ex cursus luctus. Morbi rhoncus nisl vitae urna mollis semper. Donec id lobortis nunc. Cras id auctor tellus, sollicitudin dapibus sapien. Suspendisse ac dignissim mi. Fusce mauris neque, commodo nec auctor faucibus, bibendum et massa. Aenean mauris eros, luctus id quam et, tristique tristique odio. Aenean tempor ipsum at suscipit dignissim. Nullam in purus massa. Morbi porttitor turpis leo, ullamcorper rutrum nunc lobortis non. Ut mollis justo nisi, tempor fringilla libero varius vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum tincidunt imperdiet. Donec egestas elementum orci. Maecenas at imperdiet ex. Sed accumsan dolor at ipsum ornare, vitae rutrum justo facilisis. Maecenas aliquam faucibus purus ac vulputate. Nunc ornare tortor a sem ultricies, at congue neque ullamcorper. Nullam vel neque commodo, aliquam ante in, ultricies sem.</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="dummy_title">Quick and Easy Diagnosis</string>
    <string name="dummy_desc">Kami menawarkan proses diagnosis yang cepat dan mudah untuk mengetahui penyakit tanaman hias Anda</string>
    <string name="second_title">Keep Your Plants Healthy</string>
    <string name="second_desc">Kami peduli dengan setiap detail kecil untuk memastikan tanaman Anda tetap sehat dan indah dengan menggunakan layanan kami</string>
    <string name="third_title">Reliable Plant Care Support</string>
    <string name="third_desc">Dapatkan dukungan terpercaya untuk merawat tanaman hias Anda dengan langkah-langkah yang tepat dan aman</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="welcome_text">Welcome, let\'s get started</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_header">Bagaimana kondisi\ntanamanmu sekarang?</string>
    <string name="dummy_count_plant">0</string>
    <string name="search_plant">Cari tanamanmu</string>
    <string name="scan">scan</string>
    <string name="indoor_plant">Tanaman Indoor</string>
    <string name="overview">Ringkasan</string>
    <string name="tab_scan">Scan</string>
    <string name="check_health">Pastikan selalu periksa kesehatan tanamanmu!</string>
    <string name="plant_requirement">Kebutuhan Tanaman</string>
    <string name="dummy_title_requirement">Cahaya Matahari</string>
    <string name="dummy_desc_requirement">Tempatkan di area sinar matahari sekitar 4 - 6 jam sehari</string>
    <string name="plant_disease">Penyakit Tanaman</string>
    <string name="dummy_name_disease">Penyakit Bercak Daun (Left Spot)</string>
    <string name="name_disease">•  Kategori Penyakit:</string>
    <string name="cause_disease">•  Penyebab:</string>
    <string name="dummy_cause_disease">Jamur Cercospora atau Phyllosticta spp</string>
    <string name="symptoms_disease">•  Gejala:</string>
    <string name="dummy_symptoms_disease">Muncul bercak-bercak kecil berwarna cokelat atau hitam pada daun, Bercak ini dapat membesar dan bergabung, menyebabkan daun menguning dan rontok, Pertumbuhan tanaman menjadi terhambat karena fotosintesis terganggu</string>
    <string name="plant_care">Perawatan Tanaman</string>
    <string name="scan_history">Riwayat Scan</string>
    <string name="done">Done</string>
    <string name="name_plant">Nama Tanaman</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="save">Simpan</string>
</resources>