<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.welcome.WelcomeActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/welcomeViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/welcome_first"
        app:layout_constraintBottom_toTopOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/plus_jakarta_sans_extra"
        android:text="@string/dummy_title"
        android:textAlignment="center"
        android:textColor="@color/blackText"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/txtDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/dummy_desc"
        android:textAlignment="center"
        android:textColor="#A5A5A5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/dots_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:dotsColor="#80589A73"
        app:dotsCornerRadius="18dp"
        app:dotsSize="9dp"
        app:dotsSpacing="5dp"
        app:dotsWidthFactor="2.0"
        app:layout_constraintBottom_toTopOf="@id/txtWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:progressMode="true"
        app:selectedDotColor="@color/primary_color" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/welcome_text"
        android:textColor="@color/primary_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/bottom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_skip"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/skip"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            app:backgroundTint="#F4FFF5" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_welcome"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/next"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>