<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="45dp"
        android:paddingHorizontal="32dp"
        android:background="@drawable/frame_auth"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textColor="@color/blackText"
            android:letterSpacing="-0.03"
            android:fontFamily="@font/plus_jakarta_sans_extra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="28sp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_text_field"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:hint="Email"
                android:textColor="@color/blackText"
                android:textColorHint="@color/textColorHint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textSize="14sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_text_field"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameEditTextLayout"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:hint="Kata sandi"
                android:textColor="@color/blackText"
                android:textColorHint="@color/textColorHint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="14sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtNextWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acc"
            android:textColor="#8F8F8F"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/plus_jakarta_sans_regular"
           app:layout_constraintEnd_toStartOf="@id/txtRegister"
            app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/blackText"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/txtNextWith"
            app:layout_constraintEnd_toEndOf="@id/passwordEditTextLayout"
            app:layout_constraintBottom_toBottomOf="@id/txtNextWith"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/masuk"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:background="@drawable/bg_button_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNextWith" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary_color"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>