<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.scan.list.ListScanFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="#F7F7F7"
        android:scrollbars="none"
        android:layout_marginBottom="70dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp">

            <ImageView
                android:id="@+id/bg_header"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_welcome_page"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/titleHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textSize="24sp"
                android:lineHeight="35dp"
                android:text="@string/title_header"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/bg_header"
                android:fontFamily="@font/plus_jakarta_sans_extra"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/ic_plant"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_plant"
                app:layout_constraintStart_toStartOf="@id/titleHeader"
                app:layout_constraintTop_toBottomOf="@id/titleHeader"/>

            <TextView
                android:id="@+id/countPlant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:text="@string/dummy_count_plant"
                android:textColor="@color/white"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                app:layout_constraintTop_toTopOf="@id/ic_plant"
                app:layout_constraintStart_toEndOf="@id/ic_plant"
                app:layout_constraintBottom_toBottomOf="@id/ic_plant"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_text_field"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/bg_header"
                app:layout_constraintEnd_toStartOf="@id/ic_scan"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableEnd="@drawable/ic_search"
                    android:ems="10"
                    android:fontFamily="@font/plus_jakarta_sans_medium"
                    android:hint="@string/search_plant"
                    android:textColor="@color/blackText"
                    android:textColorHint="@color/textColorHint"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ic_scan"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp"
                android:background="@drawable/bg_button_scan"
                android:src="@drawable/ic_scan_white"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/searchEditTextLayout"
                app:layout_constraintTop_toTopOf="@id/searchEditTextLayout"/>
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchEditTextLayout">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_item_scan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    tools:listitem="@layout/item_scan_plant" />
            </LinearLayout>

            <include
                android:id="@+id/notFoundContent"
                layout="@layout/not_found_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchEditTextLayout"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchEditTextLayout"
                app:shimmer_duration="800">

                <include layout="@layout/skeleton_list_fragment" />

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>